# dchat-forum

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FAQ.md  INSTALL.md  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
apps/core/: admin.py  context_processors.py  forms.py  legal_defaults.py  middleware.py  models.py  ratelimit.py  tests.py  views.py
apps/dm/: admin.py  apps.py  context_processors.py  crypto.py  forms.py  models.py  tests.py  urls.py  views.py
apps/forum/: admin.py  forms.py  models.py  stats.py  tests.py  urls.py  views.py
apps/presence/: admin.py  middleware.py  models.py
docs/: DEKCX_THEME_NOTES.md
infra/caddy/: Caddyfile
scripts/: backup.ps1  backup.sh  dev.ps1  e2e-smoke.ps1  e2e-smoke.sh  restore-test.ps1  restore-test.sh  restore.ps1  restore.sh  start-web.sh
static/css/: theme-dekcx.css  theme.css
static/js/: realtime-listener.js
templates/: base.html  changelog.html  docs_page.html  legal.html  outbound_link_warning.html  setup.html
templates/accounts/: delete_account.html  login.html  notifications.html  profile.html  profile_edit.html  register.html
templates/components/: footer.html  header.html  markdown_toolbar.html  sidebar_community.html  sidebar_dchat_meta.html  user_card_popup.html  user_forum_stats.html  user_role_badge.html
templates/dm/: conversation.html  inbox.html  reported_queue.html  settings.html
templates/forum/: home.html  moderation_queue.html  post_edit.html  thread_create.html  (+1 more)
(+12 files in other folders)
